<resources>
    <string name="app_name">17011614</string>
    <string name="btn_login">LOGIN</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="alert_wrong">Wrong username or password.</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_id_number">ID Number</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email_address">Email Address</string>
    <string name="content_description_profile_picture">profile_picture</string>
    <string name="hint_place_of_birth">Place of Birth</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="tv_information_system">Student Information System</string>
    <string name="btn_save">Save</string>
    <string name="btn_clear">Clear</string>
    <string name="alert_blank">You must fill in the all blanks.</string>
    <string name="label_profile">Student Profile</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="example_phone">05495480405</string>
    <string name="example_email">example@example.com</string>
    <string name="btn_list_enrollment">List Student Enrollment Info</string>
    <string name="label_enrollment">Student Enrollment Info</string>
    <string name="label_course_info">Course Info</string>
</resources>
