<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gl_left"
        app:layout_constraintGuide_percent=".1"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gl_right"
        app:layout_constraintGuide_percent=".9"
        android:orientation="vertical"/>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iv_profile_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ll_names"
        android:src="@drawable/profile_picture_icon"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <TextView
        android:id="@+id/tv_blank_lines_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/gl_right"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintBottom_toTopOf="@id/ll_names"
        android:text="@string/alert_blank"
        android:textSize="18sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="invisible"
        android:textStyle="italic"/>

    <LinearLayout
        android:id="@+id/ll_names"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right"
        app:layout_constraintBottom_toTopOf="@id/ll_births"
        >
        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/et_rounded_background"
            android:elevation="3dp"
            android:hint="@string/hint_name"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/black_cursor" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/et_rounded_background"
            android:elevation="3dp"
            android:hint="@string/hint_surname"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/black_cursor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_births"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="100dp"

        >
        <EditText
            android:id="@+id/et_place_of_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/et_rounded_background"
            android:elevation="3dp"
            android:hint="@string/hint_place_of_birth"
            android:textSize="16sp"
            android:inputType="text"
            android:textCursorDrawable="@drawable/black_cursor" />

        <TextView
            android:id="@+id/et_date_of_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/et_rounded_background"
            android:elevation="3dp"
            android:hint="@string/hint_date_of_birth"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@drawable/black_cursor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_numbers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right"
        app:layout_constraintTop_toBottomOf="@id/ll_births"
        >
        <EditText
            android:id="@+id/et_id_number"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:hint="@string/hint_id_number"
            android:textSize="16sp"
            android:background="@drawable/et_rounded_background"
            android:textCursorDrawable="@drawable/black_cursor"
            android:elevation="3dp"/>

        <EditText
            android:id="@+id/et_phone_number"
            android:inputType="phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:hint="@string/hint_phone_number"
            android:textSize="16sp"
            android:background="@drawable/et_rounded_background"
            android:textCursorDrawable="@drawable/black_cursor"
            android:elevation="3dp"/>
    </LinearLayout>


    <EditText
        android:id="@+id/et_email_address"
        android:inputType="textEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/gl_right"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintTop_toBottomOf="@id/ll_numbers"
        android:layout_margin="4dp"
        android:hint="@string/hint_email_address"
        android:textSize="16sp"
        android:background="@drawable/et_rounded_background"
        android:textCursorDrawable="@drawable/black_cursor"
        android:elevation="3dp"/>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right"
        app:layout_constraintTop_toBottomOf="@id/et_email_address"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/btn_clear"
            android:textColor="@android:color/holo_blue_dark"
            android:background="@drawable/border"
            />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>