<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#EEEEEE">

    <TextView
        android:id="@+id/tv_login_alert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_username"
        android:text="@string/alert_login"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:visibility="invisible"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/et_username"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_username"
        android:background="@drawable/et_rounded_background"
        android:textCursorDrawable="@drawable/black_cursor"
        android:elevation="3dp"/>

    <EditText
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:hint="@string/hint_password"
        android:background="@drawable/et_rounded_background"
        android:elevation="3dp"
        android:textCursorDrawable="@drawable/black_cursor"
        /> <!--TODO add show/hide toggle-->

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_blue_dark"/>

</android.support.constraint.ConstraintLayout>